[#S07P22A105-97] chore: user íswagger° 세팅

--- a/spring/src/main/resources/application.properties
+++ b/spring/src/main/resources/application.properties
@@ -20,6 +20,10 @@ spring.jpa.properties.hibernate.format_sql=true
 #hibernate logging : hibernate? ?? ?? ??
 logging.level.org.hibernate=info
 
+# Swagger
+springfox.documentation.swagger.use-model-v3=false
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
 #jpa ??? ??? ??? ?? ????? ?? Naming Strategy? ??? ?? ??
 #spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 #spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
