--- a/spring/src/main/resources/application.properties
+++ b/spring/src/main/resources/application.properties
@@ -7,9 +7,9 @@ spring.datasource.url=jdbc:mysql://j7a105.p.ssafy.io:3306/whatsub?serverTimezone
 spring.datasource.username=whatsub
 spring.datasource.password=whatsub1229
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 #(2) DDL ?? ? ?????? ??? ?? ?? ??
-spring.jpa.generate-ddl=false
+spring.jpa.generate-ddl=true
 #(3) jpa? hibernate? ?? CRUD? ???? ?? CRUD? sql? ???? ???
 spring.jpa.show-sql=true
 spring.jpa.database=mysql
