[#S07P22A105-169] chore: gradlew 실행 권한 변경 및 Spring Dockerfile 수정

--- a/spring/Dockerfile
+++ b/spring/Dockerfile
@@ -2,6 +2,6 @@ FROM openjdk:17-alpine
 WORKDIR /var/jenkins_home/workspace/whatsub/spring
 COPY . .
 CMD ["./gradlew", "clean", "build"]
-ARG JAR_FILE_PATH=build/libs/*.jar
+ARG JAR_FILE_PATH=build/libs/spring-0.0.1-SNAPSHOT.jar
 COPY ${JAR_FILE_PATH} whatsub.jar
 ENTRYPOINT ["java", "-jar", "whatsub.jar"]
