--- a/spring/build.gradle
+++ b/spring/build.gradle
@@ -34,8 +34,9 @@ dependencies {
 	implementation 'io.springfox:springfox-boot-starter:3.0.0' // swagger 설정
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE' // s3 설정
-	implementation 'com.google.code.gson:gson:2.8.5' //gson for kakao login
-
+	implementation 'com.google.code.gson:gson:2.9.0' //gson for kakao login
+	implementation 'com.googlecode.json-simple:json-simple:1.1.1'
+//	implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
 }
 
 tasks.named('test') {
