--- a/spring/build.gradle
+++ b/spring/build.gradle
@@ -36,7 +36,7 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE' // s3 설정
 	implementation 'com.google.code.gson:gson:2.9.0' //gson for kakao login
 	implementation 'com.googlecode.json-simple:json-simple:1.1.1'
-//	implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+//	implementation 'io.jsonwebtoken:jjwt-api:0.11.5' //jwt
 }
 
 tasks.named('test') {
