[#S07P22A105-169] chore: spring 배포 추가

--- a/spring/Dockerfile
+++ b/spring/Dockerfile
@@ -1,7 +1,9 @@
-FROM openjdk:17-alpine
+FROM openjdk:17-alpine as builder
 WORKDIR /var/jenkins_home/workspace/whatsub/spring
 COPY . .
-CMD ["./gradlew", "clean", "build"]
-ARG JAR_FILE_PATH=build/libs/spring-0.0.1-SNAPSHOT.jar
-COPY ${JAR_FILE_PATH} whatsub.jar
+RUN ./gradlew clean build
+
+FROM openjdk:17-alpine 
+COPY --from=builder build/libs/spring-0.0.1-SNAPSHOT.jar whatsub.jar
+EXPOSE 8080
 ENTRYPOINT ["java", "-jar", "whatsub.jar"]
