[#S07P22A105-169] chore: Spring Dockerfile 파일 수정

--- a/spring/Dockerfile
+++ b/spring/Dockerfile
@@ -4,6 +4,6 @@ COPY . .
 RUN ./gradlew clean build
 
 FROM openjdk:17-alpine 
-COPY --from=builder build/libs/spring-0.0.1-SNAPSHOT.jar whatsub.jar
+COPY --from=builder build/libs/*.jar whatsub.jar
 EXPOSE 8080
 ENTRYPOINT ["java", "-jar", "whatsub.jar"]
