--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -17,8 +17,7 @@ server {
                 # as directory, then fall back to displaying a 404.
                 # try_files $uri $uri/ =404;
         }
-
-        location /api/ {
+        location /api {
                 proxy_pass http://localhost:8080;
                 proxy_http_version 1.1;
                 proxy_set_header Connection "";
@@ -29,6 +28,17 @@ server {
                 proxy_set_header X-Forwarded-Host $host;
                 proxy_set_header X-Forwarded-Port $server_port;
         }
+        # location /api/v1/recommendation {
+        #         proxy_pass http://localhost:8000;
+        #         proxy_http_version 1.1;
+        #         proxy_set_header Connection "";
+        #         proxy_set_header Host $host;
+        #         proxy_set_header X-Real-IP $remote_addr;
+        #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        #         proxy_set_header X-Forwarded-Proto $scheme;
+        #         proxy_set_header X-Forwarded-Host $host;
+        #         proxy_set_header X-Forwarded-Port $server_port;
+        # }
 }
 
 server {
