--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -18,7 +18,7 @@ server {
                 # try_files $uri $uri/ =404;
         }
         location /api {
-                proxy_pass http://localhost:8080;
+                proxy_pass http://j7a105.p.ssafy.io:8080;
                 proxy_http_version 1.1;
                 proxy_set_header Connection "";
                 proxy_set_header Host $host;
