--- a/spring/src/main/resources/application.properties
+++ b/spring/src/main/resources/application.properties
@@ -36,11 +36,4 @@ cloud.aws.credentials.instanceProfile=true
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=20MB
 
-#jpa ??? ??? ??? ?? ????? ?? Naming Strategy? ??? ?? ??
-#spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
-#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-
-#sql log
-#logging.level.com.ssafy.pomostamp.model.dao=DEBUG
-#
-#spring.jwt.secretKey=pomostamp
+server.servlet.context-path=/api/v1
