--- a/vue/package.json
+++ b/vue/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "chart.js": "^3.9.1",
     "core-js": "^3.8.3",
     "dayjs": "^1.11.5",
     "dotenv": "^16.0.2",
@@ -16,6 +17,7 @@
     "router": "^1.3.7",
     "scss": "^0.2.4",
     "vue": "^2.6.14",
+    "vue-chartjs": "^4.1.2",
     "vue-observe-visibility": "^1.0.0",
     "vue-persistedstate": "^1.2.5",
     "vue-router": "^3.5.1",
