--- a/vue/package.json
+++ b/vue/package.json
@@ -20,6 +20,7 @@
     "vue-chartjs": "^4.1.2",
     "vue-observe-visibility": "^1.0.0",
     "vue-persistedstate": "^1.2.5",
+    "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.0",
     "vuex": "^3.6.2",
