--- a/vue/nginx.conf
+++ b/vue/nginx.conf
@@ -7,6 +7,10 @@ server {
 
 	server_name j7a105.p.ssafy.io;
 
+        location /static/ {
+                root /home/ubuntu/staticfiles/;
+        }
+
         location / {
 
                 root /usr/share/nginx/html;
